# Physical-Ai-Humaniod-Robotics

./: .gitignore  GEMINI.md  manual_server_instructions.md  user_instructions.md  user_instructions_for_uvicorn_fix.md  user_interaction_instructions.md
.specify/memory/: constitution.md
backend/: agent.py  api.py  conftest.py  main.py  pyproject.toml  requirements.txt  retrieval.py
backend/tests/: test_agent.py
frontend/: docusaurus.config.ts  sidebars.ts
frontend/docs/: intro.md
frontend/docs/Module-1-ROS-2/: _category_.json  introduction-to-physical-ai.md  physical-ai-landscape.md  python-and-ros-2.md  ros-2-fundamentals.md
frontend/docs/Module-2-Gazebo-Unity/: _category_.json  advanced-simulation-with-unity.md  simulating-a-robot-senses.md  simulating-robots-in-gazebo.md  understanding-urdf-for-humanoids.md
frontend/docs/Module-3-ISAAC/: _category_.json  advanced-path-planning-with-nav2.md  introduction-to-nvidia-isaac-sim.md  (+1 more)
specs/001-docusaurus-init-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-homepage-textbook-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-pipeline-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-retrieval-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gemini-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-chatbot-ui-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+63 files in other folders)
